--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -192,7 +192,7 @@ In permitting multiple domains, \FOL\ follows the lead of natural languages like
 	\item[\ex{ex.qdr}] All the beer has been drunk; so we're going to the bottle-o. 
 \end{earg} The premise says that all the beer is gone. But the conclusion only makes sense if there is more beer at the bottle shop. So whatever domain of things we are talking about when we state the premise, it cannot include absolutely \emph{everything}. In \FOL, we sidestep the interesting issues involved in deciding just what domain is involved in evaluating sentences like `all the beer has been drunk', and explicitly include the current domain of quantification in our symbolisation key.
 
-Note further that to make sense of the sentence `all the beer has been drunk', the domain will have to contain both past and present things, so we can understand what we are saying about the now-absent beer. A domain contains \emph{what we are talking about}. It might be difficult to understand how we do it, but we do talk about past things, fictional things, abstract things, merely possible things, and other unusual entities. So our domains must be flexible enough to include any of these things we might be talking about. It is a question in philosophical logic as to how we can explain how we manage to include non-existent things in our domain of discourse, but for the purposes of \FOL\ all we need to know is that this is something we somehow manage to do.
+Note further that to make sense of the sentence `all the beer has been drunk', the domain will have to contain both past and present things, so we can understand what we are saying about the now-absent beer. A domain contains \emph{what we are talking about}. It might be difficult to understand how we do it, but we do talk about past things, fictional things, abstract things, merely possible things, and other unusual entities. So our domains must be flexible enough to include any of these things we might be talking about. It is a question in philosophical logic as to how we can explain how we manage to include nonexistent things in our domain of discourse, but for the purposes of \FOL\ all we need to know is that this is something we somehow manage to do.
 
 \factoidbox{
 		A domain must have \emph{at least} one member. A name must pick out \emph{exactly} one member of the domain. But a member of the domain may be picked out by one name, many names, or none at all. The domain can consist of anything we might be discussing; it is not restricted to things that presently exist.}
@@ -296,7 +296,7 @@ A conditional will usually be the natural connective to use with a universal qua
 	}		
 Sentence \ref{quan3} can be paraphrased as, `It is not the case that every coin on the table is a dollar'. So we can symbolise it by `$\enot \forall x(Tx \eif Dx)$'. You might look at sentence \ref{quan3} and paraphrase it instead as, `Some coin on the table is not a dollar'. You would then symbolise it by `$\exists x(Tx \eand \enot Dx)$'. Although it is probably not immediately obvious yet, these two sentences are logically equivalent. (This is due to the logical equivalence between $\enot\forall x\meta{A}$ and $\exists x\enot\meta{A}$, mentioned in §\ref{s:FOLBuildingBlocks}, along with the logical equivalence between $\enot(\meta{A}\eif\meta{B})$ and $\meta{A}\eand\enot\meta{B}$.)
 
-Sentence \ref{quan4} can be paraphrased as, `It is not the case that there is some dollar in my pocket'. This can be symbolised by `$\enot\exists x(Px \eand Dx)$'. It might also be paraphrased as, `Everything in my pocket is a non-dollar', and then could be symbolised by `$\forall x(Px \eif \enot Dx)$'. Again the two symbolisations are logically equivalent. Both are correct symbolisations of sentence \ref{quan4}.
+Sentence \ref{quan4} can be paraphrased as, `It is not the case that there is some dollar in my pocket'. This can be symbolised by `$\enot\exists x(Px \eand Dx)$'. It might also be paraphrased as, `Everything in my pocket is a nondollar', and then could be symbolised by `$\forall x(Px \eif \enot Dx)$'. Again the two symbolisations are logically equivalent. Both are correct symbolisations of sentence \ref{quan4}.
 
 
 \section{Empty Predicates}
@@ -481,7 +481,7 @@ But note that our symbolisation would suggest that this argument is valid: \begi
 	\item[\ex{syn2}] Daisy is a small cow; so Daisy is small.
 \end{earg} The symbolised argument, $Sd \wedge Cd \ttherefore Sd$, is clearly valid.
 
-But the original argument \ref{syn2} is not valid. Even a small cow is still rather large. (Likewise, even a short basketball player is still generally well above average height.) The point is that `\blank\ is a small cow' denotes the property something has when it is small \emph{for a cow}, while `\blank\ is small' denotes the property of being a small \emph{thing}. (In ordinary speech we tend to keep the  `for an $F$' part of these phrases silent, and let our conversational circumstances supply it automatically.) But neither should we treat `small' as a non-intersective adjective. If we do, we will be unable to account for the valid argument `Daisy is a small cow, so Daisy is a cow'. 
+But the original argument \ref{syn2} is not valid. Even a small cow is still rather large. (Likewise, even a short basketball player is still generally well above average height.) The point is that `\blank\ is a small cow' denotes the property something has when it is small \emph{for a cow}, while `\blank\ is small' denotes the property of being a small \emph{thing}. (In ordinary speech we tend to keep the  `for an $F$' part of these phrases silent, and let our conversational circumstances supply it automatically.) But neither should we treat `small' as a nonintersective adjective. If we do, we will be unable to account for the valid argument `Daisy is a small cow, so Daisy is a cow'. 
 
 The correct symbolisation key will thus be this, keeping the other symbols as they were: 
 	\begin{ekey}
@@ -1097,7 +1097,7 @@ These principles of identity can be expressed as sentences of \FOL. In the defin
 These principles can apply to other two-place predicates too. For example, the two-place English predicate `\gap{1} is taller than \gap{2}' is also transitive, since if Albert is taller than Barbara, and Barbara is taller than Chloe, then Albert must be taller than Chloe too. But it is not reflexive or symmetric: Albert is not taller than himself, and if Albert is taller than Barbara, it cannot be also that Barbara is taller than Albert. We will return to this topic in §\ref{binary}.
 
 A final principle about identity is \define{Leibniz' Law}, named after the philosopher and mathematician Gottfried Leibniz: \factoidbox{If $\meta{x}=\meta{y}$ then for any property at all,  $\meta{x}$ has it iff $\meta{y}$ has it too. That is: every instance of this schematic sentence of \FOL, for any predicate $\meta{F}$ whatsoever, is true: $$\forall x \forall y \bigl(x=y \eif (\meta{F}x \eiff \meta{F}y) \bigr).$$} 
-Leibniz' Law certainly entails that identical things are indistinguishable, sharing every property in common. But as we have already noted, identity isn't merely indistinguishability. Two things might be indistinguishable, but if there are two, they are not strictly identical in the logical sense we are concerned with. Yet in many cases, even very similar things do turn out to have some distinguishing property. There is a significant philosophical controversy over whether there can be cases of mere numerical difference, i.e., of non-identity without any qualitative dissimilarity. 
+Leibniz' Law certainly entails that identical things are indistinguishable, sharing every property in common. But as we have already noted, identity isn't merely indistinguishability. Two things might be indistinguishable, but if there are two, they are not strictly identical in the logical sense we are concerned with. Yet in many cases, even very similar things do turn out to have some distinguishing property. There is a significant philosophical controversy over whether there can be cases of mere numerical difference, i.e., of nonidentity without any qualitative dissimilarity. 
 
 
 
@@ -1395,7 +1395,7 @@ With the notion of presupposition failure in hand, the Frege-Strawson theory see
 \item[\ex{metaling}] Sarah is \emph{not} the source of the leak; there was no leak!
 \end{earg} The effects which Russell sees as the result of scope ambiguity are re-analysed as involving the contrast between ordinary negation in \ref{innernegation}, and metalinguistic negation in \ref{outernegation}. Crucially, on the Frege-Strawson view, the successful deployment of metalinguistic negation in cases like \ref{metaling} renders the sentence `Sarah is the source of the leak' neither true nor false.
 
-The phenomenon of metalinguistic negation is real. But if we agree with Frege and Strawson here on how to model it semantically,  we shall need to revise our logic. For, in our logic, there are only two truth values (True and False), and every meaningful sentence is assigned exactly one of these truth values. Why? Suppose there is presupposition failure of `John has stopped drinking', because John never drank. Then `John has stopped drinking' can't be true since it entails something false, its presupposition `John drank'. And `John hasn't stopped drinking' can't be true, since it also entails that same falsehood. So neither can be true. Since one is the negation of the other, if either is false, the other is true. So neither can be false, either. So if there are non-trivial semantic presuppositions – semantic presuppositions that might be false – then we shall have to admit that some meaningful sentences with a false presupposition are neither true nor false. It remains an open question, admittedly, whether presuppositions in the ordinary and intuitive sense are really semantic presuppositions in \emph{this} sense. 
+The phenomenon of metalinguistic negation is real. But if we agree with Frege and Strawson here on how to model it semantically,  we shall need to revise our logic. For, in our logic, there are only two truth values (True and False), and every meaningful sentence is assigned exactly one of these truth values. Why? Suppose there is presupposition failure of `John has stopped drinking', because John never drank. Then `John has stopped drinking' can't be true since it entails something false, its presupposition `John drank'. And `John hasn't stopped drinking' can't be true, since it also entails that same falsehood. So neither can be true. Since one is the negation of the other, if either is false, the other is true. So neither can be false, either. So if there are nontrivial semantic presuppositions – semantic presuppositions that might be false – then we shall have to admit that some meaningful sentences with a false presupposition are neither true nor false. It remains an open question, admittedly, whether presuppositions in the ordinary and intuitive sense are really semantic presuppositions in \emph{this} sense. 
 
 But there is room to disagree with Strawson. Strawson is appealing to some linguistic intuitions, but it is not clear that they are very robust. For example: isn't it just \emph{false}, not `gappy', that Antony is grandfather to the present King of France? (This is Neale's line.)
 
