--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -357,7 +357,7 @@ One trick to this proof is to be sure to instantiate the universally quantified 
 
 Above, I offered informal arguments for each of our quantifier rules that seem to exemplify the pattern of argument in the rule, and to be intuitively valid. But we can also offer justifications for our rules in terms of interpretations of the sentences involved, and the principles governing truth of quantified sentences introduced in §\ref{fol.truth.quant}. 
 
-For example, consider any interpretation which makes $\forall\meta{x}\meta{A}$ true. In any such interpretation, there will be a non-empty domain, and every name will denote some member of this domain. $\forall\meta{x}\meta{A}$ is true just in case for any name we like, it will denote something of which $\meta{A}\subs{\meta{c}}{\meta{x}}$ is true. So in any such interpretation, for each name in the language \meta{c}, $\meta{A}\subs{\meta{c}}{\meta{x}}$ will also be true. So the proof rule of $\forall$E corresponds to a valid argument form.
+For example, consider any interpretation which makes $\forall\meta{x}\meta{A}$ true. In any such interpretation, there will be a nonempty domain, and every name will denote some member of this domain. $\forall\meta{x}\meta{A}$ is true just in case for any name we like, it will denote something of which $\meta{A}\subs{\meta{c}}{\meta{x}}$ is true. So in any such interpretation, for each name in the language \meta{c}, $\meta{A}\subs{\meta{c}}{\meta{x}}$ will also be true. So the proof rule of $\forall$E corresponds to a valid argument form.
 
 For $\exists$E, the case is only a little more involved. Suppose $\exists\meta{x}\meta{A}$ is true in an interpretation. Then there is some interpretation, otherwise just like the original one, in which some new name $\meta{c}$ is assigned to some object in the domain, and where $\meta{A}\subs{\meta{c}}{\meta{x}}$ is true. Suppose that, in fact, every interpretation which makes $\meta{A}\subs{\meta{c}}{\meta{x}}$ true also makes  $\meta{B}$ true, where the new name \meta{c} does not appear in \meta{B}. Could \meta{B} be false in our original interpretation? No – for everything that appears in \meta{B} is already interpreted in the original interpretation, with the same interpretation as in the interpretation which makes it true. So it must be true in our original interpretation too. So $\meta{C}_{1},…,\meta{C}_{n},\exists\meta{x}\meta{A}\entails \meta{B}$ (when the name \meta{c} makes no appearance in any sentence in this argument), and the proof rule of $\exists$E corresponds to a valid argument form.
 
