--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -79,7 +79,7 @@ When analysing the structure of compound sentences, a useful notion is that of a
 \end{earg}
 A canonical clause has internal structure too, but its parts are not themselves sentences. It is composed of a \define{grammatical subject}, typically but not always a noun phrase (`Jenny', `She'), and a \define{predicate}, always a verb phrase (`knew the victim', `is happy'). 
 
-The following, in contrast with the previous examples, are non-canonical clauses: 
+The following, in contrast with the previous examples, are noncanonical clauses: 
 \begin{earg}
 	\item[\ex{nc1}] They \underline{did not} know the victim.
 	\item[\ex{nc3}] She has read your article \underline{and} she vehemently disagrees with it.
@@ -111,7 +111,7 @@ We paraphrase the compound sentence `Jenny is either happy or sad' into a compou
 \begin{itemize}
 \item Jenny is happy or Jenny is sad.
 \end{itemize} 
-And we paraphrase the non-canonical clause `Jenny is not happy' as the negative clause 
+And we paraphrase the noncanonical clause `Jenny is not happy' as the negative clause 
 \begin{itemize}
 	\item It is not the case that: Jenny is happy.
 
@@ -146,12 +146,12 @@ The schematic paraphrase `Not A and B' is potentially ambiguous, because it is n
 \end{figure}
 
 
-Sharp-eyed readers will have noticed that our list of special words doesn't precisely line up with the canonical clauses we introduced in §\ref{ss.canonical}. Consider the non-canonical clause `She said that Jenny is sad', in which the canonical clause `Jenny is sad' is subordinate within an indirect speech report. Because `She said that' is not on our special list of words, we cannot analyse this sentence as composed from a canonical clause and some structural expression. So for the purposes of sentential logic, we will treat `She said that Jenny is sad' \emph{as if} it were canonical, even though it is not from the point of view of English grammar. From the point of view of our structural words, this sentence doesn't have any further structure that we can identify. Such \define{quasi-canonical clauses} – clauses that do not feature any of our list of structural words – will also be replaced by placeholder letters in our analysis. 
+Sharp-eyed readers will have noticed that our list of special words doesn't precisely line up with the canonical clauses we introduced in §\ref{ss.canonical}. Consider the noncanonical clause `She said that Jenny is sad', in which the canonical clause `Jenny is sad' is subordinate within an indirect speech report. Because `She said that' is not on our special list of words, we cannot analyse this sentence as composed from a canonical clause and some structural expression. So for the purposes of sentential logic, we will treat `She said that Jenny is sad' \emph{as if} it were canonical, even though it is not from the point of view of English grammar. From the point of view of our structural words, this sentence doesn't have any further structure that we can identify. Such \define{quasi-canonical clauses} – clauses that do not feature any of our list of structural words – will also be replaced by placeholder letters in our analysis. 
 
 
 This raises another question. What makes the words on our list special? Logicians tend to take a pragmatic attitude to this question. They say: \emph{nothing}! If you had chosen different words, you would have come up with a different structure. In terms of the syntactic trees we drew above, there is a hierarchy of levels when breaking down the top-level sentence into constituent phrases, and different choices of structural words correspond to different choices concerning the level at which to stop our analysis.
 
-Linguists take a very expansive view of structural words, so that the class of canonical clauses is rather small, and there is a lot of structure to be identified in natural language. For example, the presence of modal auxiliaries (like `will' or `must', as in `James \underline{must} eat'), verb inflections other than the present tense (e.g., `they \underline{took} snuff'), and subordination (as in `\underline{Etta knew that} peaches were abundant'), in addition to items on our list of structural words, suffices to make a clause non-canonical. And there are logics which do take these to be structural words: modal logics, tense logics, and epistemic logics treat these as structural words and provide recipes for the structural analysis of arguments that abstract away features other than these words. But there is no fundamental principle that divides words once and for all into structural words and other words. So logicians are more interested in quasi-canonical clauses, given some fixed list of structural words, when using logic to model or represent natural languages. 
+Linguists take a very expansive view of structural words, so that the class of canonical clauses is rather small, and there is a lot of structure to be identified in natural language. For example, the presence of modal auxiliaries (like `will' or `must', as in `James \underline{must} eat'), verb inflections other than the present tense (e.g., `they \underline{took} snuff'), and subordination (as in `\underline{Etta knew that} peaches were abundant'), in addition to items on our list of structural words, suffices to make a clause noncanonical. And there are logics which do take these to be structural words: modal logics, tense logics, and epistemic logics treat these as structural words and provide recipes for the structural analysis of arguments that abstract away features other than these words. But there is no fundamental principle that divides words once and for all into structural words and other words. So logicians are more interested in quasi-canonical clauses, given some fixed list of structural words, when using logic to model or represent natural languages. 
 
 We will start simply, and focus on the list of truth-functional sentence connectives, principally `and', `or', `not', `if … then …' and `… if and only if …'. There are practical reasons why these words are useful ones to focus on initially, which I will now discuss.
 
@@ -298,7 +298,7 @@ But some care is needed when handling negations. Consider:
 		\item[\ex{not6}] Jane is happy.
 		\item[\ex{not7}] Jane is unhappy.
 	\end{earg}
-If we let the \TFL-sentence `$H$' symbolise  `Jane is happy', then we can symbolise sentence \ref{not6} as `$H$'. However, it would be a mistake in general to symbolise sentence \ref{not7} with `$\enot{H}$'. If Jane is unhappy, then she is not happy; but sentence \ref{not7} does not mean the same thing as `It is not the case that Jane is happy'. Jane might be neither happy nor unhappy; she might be in a state of blank indifference. In order to symbolise sentence \ref{not7}, then, we will typically want to introduce a new atomic sentence of \TFL. Nevertheless, there may be limited circumstances where it doesn't matter which of these non-synonymous ways to deny `Jane is happy' I adopt.
+If we let the \TFL-sentence `$H$' symbolise  `Jane is happy', then we can symbolise sentence \ref{not6} as `$H$'. However, it would be a mistake in general to symbolise sentence \ref{not7} with `$\enot{H}$'. If Jane is unhappy, then she is not happy; but sentence \ref{not7} does not mean the same thing as `It is not the case that Jane is happy'. Jane might be neither happy nor unhappy; she might be in a state of blank indifference. In order to symbolise sentence \ref{not7}, then, we will typically want to introduce a new atomic sentence of \TFL. Nevertheless, there may be limited circumstances where it doesn't matter which of these nonsynonymous ways to deny `Jane is happy' I adopt.
 
 Sometimes a sentence will include a negative for literary effect, even though what is expressed isn't negative. Consider \begin{earg}
 	\item[\ex{sc.imp}] I don't like cricket; I love it!
@@ -608,7 +608,7 @@ Connectives & $\enot,\eand,\eor,\eif,\eiff$\\
 Parentheses &( , )\\
 \bottomrule \end{tabular} 
 \end{center}
-We define an \define{expression} of \TFL\ as any finite non-empty string of symbols of \TFL. Take any of the symbols of \TFL\ and write them down, in any order, and you have an expression of \TFL. Expressions are sometimes called `strings', because they are just a string of symbols from the approved list above. No restriction is placed on expressions apart from having to contain at least one character, and not going on infinitely long.
+We define an \define{expression} of \TFL\ as any finite nonempty string of symbols of \TFL. Take any of the symbols of \TFL\ and write them down, in any order, and you have an expression of \TFL. Expressions are sometimes called `strings', because they are just a string of symbols from the approved list above. No restriction is placed on expressions apart from having to contain at least one character, and not going on infinitely long.
 
 
 \section{Sentences}\label{s.sentencesTFL}
@@ -662,7 +662,7 @@ The recursive structure of sentences in \TFL\ will be important when we consider
 The recursive structure of sentences in \TFL\ also allows us to give a formal definition of the \emph{scope} of a negation (mentioned in §\ref{s:ConnectiveConjunction}). The scope of `$\enot$' is the subsentence for which `$\enot$' is the main connective. So a sentence like $$(P \eand (\enot (R \eand B) \eiff Q))$$ was constructed by conjoining `$P$' with `$(\enot (R \eand B) \eiff Q)$'. This last sentence was constructed by placing a biconditional between `$\enot (R \eand B)$' and `$Q$'. And the former of these sentences – a subsentence of our original sentence – is a sentence for which `$\enot$' is the main connective. So the scope of the negation is just `$\enot(R \eand B)$'. More generally:
 \factoidbox{The \define{scope} of an instance of a connective (in a sentence) is the subsentence which has that instance of the connective as its main connective.} I talk of `instances' of a connective because, in an example like `$\enot\enot A$', there are two occurrences of the negation connective, with different scopes – one is the main connective of the whole sentence, the other has just `$\enot A$' as its scope.
 
-The recursive definition of a sentence of \TFL\ can also be depicted using a \define{formation tree}, similar to the syntactic trees for English we saw in §\ref{s:firststeps}, but much simpler. At each leaf node of the tree is either an atomic sentence or a sentence connective. Each non-leaf node contains a \TFL\ sentence, and branching from it are (i) its main connective, and (ii) the immediate subsentences in the scope of the main connective. \TFL\ sentences are just those expressions of the language that have a formation tree respecting these rules. Consider again the sentence `$\enot (P \eand \enot (\enot Q \eor R))$'. This has the formation tree depicted in Figure \ref{fig.formtree}.
+The recursive definition of a sentence of \TFL\ can also be depicted using a \define{formation tree}, similar to the syntactic trees for English we saw in §\ref{s:firststeps}, but much simpler. At each leaf node of the tree is either an atomic sentence or a sentence connective. Each nonleaf node contains a \TFL\ sentence, and branching from it are (i) its main connective, and (ii) the immediate subsentences in the scope of the main connective. \TFL\ sentences are just those expressions of the language that have a formation tree respecting these rules. Consider again the sentence `$\enot (P \eand \enot (\enot Q \eor R))$'. This has the formation tree depicted in Figure \ref{fig.formtree}.
 \begin{figure}
 	\begin{tikzpicture}[sibling distance=16pt]
 		\Tree  [.{$\enot (P \eand \enot (\enot Q \eor R))$} $\enot$ [.{$(P \eand \enot (\enot Q \eor R))$} $P$ $\eand$ [.{$\enot (\enot Q \eor R)$} $\enot$ [.{$(\enot Q \eor R)$} [.{$\enot Q$} $\enot$ $Q$ ] $\eor$ $R$ ] ] ]  ]
