--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -24,7 +24,7 @@ Daisy Turnbull & Malcolm\\
 \end{tabular}
 \end{center} In this table we have an \emph{input}, on the left, which is related to the \emph{output} on the right. The relation which maps the things in the left column to their corresponding outputs on the right is known as a function – in this case, the `biological father of' function. More precisely, a \define{function} is a relation between the members of some collection $A$ and some collection $B$ (which may be the same as $A$), such that each input to the function is a member of $A$, each output of the function is a member of $B$, and, crucially, each member of $A$ is associated with at most one member of $B$. So `the biological father of …' is a function from the set of people (living or dead) to itself, and associates each person with their biological father. We implicitly that `biological father' permits each person to be associated with a unique father. If we consider other notions of fatherhood, such as \emph{paternal figure}, those would not yield a function, because many people have two or more paternal figures in their lives. Note that while everyone is associated with a unique biological father by this function (no input is associated with more than one output), the converse does not hold: some outputs are linked to more than one input, in fact, every father with more than one child.
 
-Common examples of functions occur in mathematics: we can consider the function `the sum of $x$ and $y$', which takes two numbers as input, and spits out their unique sum, $x+y$. This is again a function from a set to itself, this time the set of integers. There are functions which are from one set to another: consider, `the number of …'s children', which is a function from people to numbers, mapping each person to the number of children they have. (Even if they have more than one child, there is still a unique number characterising how many they have, and that is what this function spits out.) There are functions which do not associate an output with every input: consider `the eldest child of', which associates each parent with their first-born child, but doesn't associate non-parents with anything. There are many relations which are not functions. While Barack Obama can be characterised as `the father of Malia', Malia Obama cannot be characterised as `the child of Barack', since that attempted description would apply equally to her sister.  
+Common examples of functions occur in mathematics: we can consider the function `the sum of $x$ and $y$', which takes two numbers as input, and spits out their unique sum, $x+y$. This is again a function from a set to itself, this time the set of integers. There are functions which are from one set to another: consider, `the number of …'s children', which is a function from people to numbers, mapping each person to the number of children they have. (Even if they have more than one child, there is still a unique number characterising how many they have, and that is what this function spits out.) There are functions which do not associate an output with every input: consider `the eldest child of', which associates each parent with their first-born child, but doesn't associate nonparents with anything. There are many relations which are not functions. While Barack Obama can be characterised as `the father of Malia', Malia Obama cannot be characterised as `the child of Barack', since that attempted description would apply equally to her sister.  
 
 \section{The Idea of Truth-Functionality}
 
@@ -37,7 +37,7 @@ This is an important idea about \TFL\ sentence connectives. They are each associ
 		A connective is \define{truth-functional} iff the truth value of a sentence with that connective as its main connective is uniquely determined by the truth value(s) of the constituent sentence(s), i.e., its meaning is a truth-function.
 
 		\emph{Every connective in \TFL\ is truth-functional.}}
-It turns out that we don't need to know anything more about the atomic sentences of \TFL\ than their truth values to assign a truth value to those non-atomic, or \define{compound}, sentences. More generally, the truth value of any compound sentence depends only on the truth value of the subsentences that comprise it. In order to know the truth value of `$(D \eand E)$', for instance, you only need to know the truth value of `$D$' and the truth value of `$E$'. In order to know the truth value of `$\bigl( (D \eand E) \eor F\bigr)$', you need only know the truth value of `$(D \eand E)$' and `$F$'. And so on. This is fact a good part of the reason why we chose these connectives, and chose their English near-equivalents as our structural words. To determine the truth value of some \TFL\ sentence, we only need to know the truth value of its components. This is why the study of \TFL\ is termed \emph{truth-functional logic}.
+It turns out that we don't need to know anything more about the atomic sentences of \TFL\ than their truth values to assign a truth value to those nonatomic, or \define{compound}, sentences. More generally, the truth value of any compound sentence depends only on the truth value of the subsentences that comprise it. In order to know the truth value of `$(D \eand E)$', for instance, you only need to know the truth value of `$D$' and the truth value of `$E$'. In order to know the truth value of `$\bigl( (D \eand E) \eor F\bigr)$', you need only know the truth value of `$(D \eand E)$' and `$F$'. And so on. This is fact a good part of the reason why we chose these connectives, and chose their English near-equivalents as our structural words. To determine the truth value of some \TFL\ sentence, we only need to know the truth value of its components. This is why the study of \TFL\ is termed \emph{truth-functional logic}.
 
 \section{Schematic Truth Tables}\label{s:SchematicTruthTables}
 
@@ -232,7 +232,7 @@ For now, I shall content myself with the observation that `$\eif$' is the only p
 \keyideas{
 	\item The connectives of \TFL\ are all truth-functional, and have their meanings specified by the truth-tables laid out in §\ref{s:SchematicTruthTables}.
 	\item When we treat a sentence of \TFL\ as symbolising an English sentence, we need only say that as far as truth value is concerned and truth-functional structure is concerned, they are alike. 
-	\item  English has many non-truth-functional connectives. Some uses of the conditional `if' are non-truth-functional. But as long as we remain aware of the limitations of \TFL, it can be a very powerful tool for modelling a significant class of arguments.
+	\item  English has many nontruth-functional connectives. Some uses of the conditional `if' are nontruth-functional. But as long as we remain aware of the limitations of \TFL, it can be a very powerful tool for modelling a significant class of arguments.
 }
 
 \practiceproblems
@@ -261,8 +261,8 @@ So far, we have considered assigning truth values to \TFL\ sentences indirectly.
 		A \define{valuation} is any assignment of truth values to some atomic sentences of \TFL. It assigns exactly one truth value, either True or False, to each of the sentences in question.
 	}
 A valuation is thus a function from atomic sentences to truth values. So this is a valuation: \begin{align*}
-	A, G, P, G_{7}  &\mapsto \mathrm{T}\\ 
-	F, R, Z &\mapsto \mathrm{F}.
+	A, G, P, G_{7}  &\mapsto \text{T}\\ 
+	F, R, Z &\mapsto \text{F}.
 \end{align*} There is no requirement that a valuation be a \define{total function}, that is, that it assign a truth value to every atomic sentence. To be fix the truth value of a sentence \meta{A} of \TFL\ a valuation must assign a truth value to every atomic sentence \meta{A} contains.
 
 
@@ -685,7 +685,7 @@ So the Crows will win.
 	\end{earg}
 Both of these arguments have the same structure. Let's focus on the second, example \ref{n:GodParadox}. Symbolising it in \TFL, we would offer something like `$\enot (G \eif M) \ttherefore G$'. Now, as can easily be checked with a truth table, this is a correct entailment in \TFL. So if we symbolise the argument \ref{n:GodParadox} in \TFL in this way, the conditional premise entails that God exists. But that's strange: surely even the atheist can accept sentence \ref{n:GodParadox}, without contradicting herself! Some say that \ref{n:GodParadox} would be better symbolised by `$G \eif \enot M$', even though that doesn't reflect the apparent form of the English sentence. `$G \eif \enot M$' does not entail $G$. This symbolisation does a better job of reflecting the intuitive consequences of the English sentence \ref{n:GodParadox}, but at the cost of abandoning a straightforward correspondence between the structure of English sentences and their \TFL\ symbolisations. 
 
-A better alternative might be to think that the conditional `if God exists, she answers malevolent prayers' is not to be symbolised by `$\eif$'. This conditional is false, many think: they may think, for example, that it is part of the concept of God that God is good, and hence would not grant prayers with evil intent. Even the atheist might accept this, maybe because they accept the subjunctive conditional `even if God were to exist, God would not answer malevolent prayers' (§\ref{s:IndicativeSubjunctive}). This sort of example has motivated many philosophers to offer non-truth-functional accounts of the English `if', including some that make it behave rather like a subjunctive conditional.\footnote{Edgington discusses Stalnaker's version of such an account in `Nearest Possible Worlds', §4.1 of her `Indicative Conditionals', cited above (\url{http://plato.stanford.edu/entries/conditionals/\#Sta}).} 
+A better alternative might be to think that the conditional `if God exists, she answers malevolent prayers' is not to be symbolised by `$\eif$'. This conditional is false, many think: they may think, for example, that it is part of the concept of God that God is good, and hence would not grant prayers with evil intent. Even the atheist might accept this, maybe because they accept the subjunctive conditional `even if God were to exist, God would not answer malevolent prayers' (§\ref{s:IndicativeSubjunctive}). This sort of example has motivated many philosophers to offer nontruth-functional accounts of the English `if', including some that make it behave rather like a subjunctive conditional.\footnote{Edgington discusses Stalnaker's version of such an account in `Nearest Possible Worlds', §4.1 of her `Indicative Conditionals', cited above (\url{http://plato.stanford.edu/entries/conditionals/\#Sta}).} 
 
 The cases in \ref{crows} and \ref{n:GodParadox} are examples of the (so-called) \emph{paradoxes of material implication}. They highlight a limitation of \TFL, in that it appears not to have a conditional connective that adequately models these uses of the English `if'. But it is also a limitation of our tests for validity in English, because the test is only as good as the symbolisations we come up with as part of it. If we are not careful, we might end up mistakenly using an inadequate symbolisation, and giving the wrong verdict about some argument, thinking it valid when it is not.  (I will return one final time to the relation between `if' and {\eif} in §\ref{cond.proof}.)
 
